# ChangeLog for dev-haskell/wxhaskell
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/wxhaskell/ChangeLog,v 1.7 2004/08/23 13:15:43 kosmikus Exp $

*wxhaskell-0.8 (23 Aug 2004)

  23 Aug 2004; Andres Loeh <kosmikus@gentoo.org> wxhaskell-0.8.ebuild:
  New version.

  13 Jun 2004; Andres Loeh <kosmikus@gentoo.org> wxhaskell-0.7.ebuild:
  Marked stable for x86.

  02 Jun 2004; Aron Griffis <agriffis@gentoo.org> wxhaskell-0.6-r1.ebuild,
  wxhaskell-0.6.ebuild, wxhaskell-0.7.ebuild:
  Fix use invocation

*wxhaskell-0.7 (12 Apr 2004)

  12 Apr 2004; Andres Loeh <kosmikus@gentoo.org> wxhaskell-0.7.ebuild:
  New version.

*wxhaskell-0.6-r1 (03 Mar 2004)

  03 Mar 2004; Andres Loeh <kosmikus@gentoo.org> wxhaskell-0.6-r1.ebuild:
  Fixed library placement bug.

*wxhaskell-0.6 (03 Mar 2004)

  03 Mar 2004; Andres Loeh <kosmikus@gentoo.org> metadata.xml,
  wxhaskell-0.6.ebuild:
  wxHaskell is a Haskell binding for the wxWidgets library. First import into
  portage.
