@@ -1,9 +1,9 @@
 MD5 e22f934b9f040f325944ac24ac7478e5 wxhaskell-0.7.ebuild 2331
 MD5 61868cbfbc9fef58146982ef2ad7c74e wxhaskell-0.6-r1.ebuild 2368
 MD5 a07765cd08c1fd8eab7f40b2f18acf5b wxhaskell-0.6.ebuild 2238
-MD5 541c57ec11107ed79dd51e244f49ecab ChangeLog 1037
+MD5 f7cba4d883d53671b39323b80f6b967e ChangeLog 1150
 MD5 a769ecfcd1cdd2d40986627df7dfb249 metadata.xml 224
-MD5 7d2b03769dbad0e69be03dffcb209cad wxhaskell-0.8.ebuild 2332
+MD5 be89953adffef07508c914b85daf9676 wxhaskell-0.8.ebuild 2628
 MD5 3370d9be457b4e8fa9b80ec89b49f30b files/digest-wxhaskell-0.6 132
 MD5 6f249be5b808ef834f9ea740d68b12c4 files/digest-wxhaskell-0.7 66
 MD5 08efb7ecd02832c5599b968bdc329dc9 files/digest-wxhaskell-0.8 66
