@@ -1,6 +1,9 @@
 # ChangeLog for dev-haskell/wxhaskell
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/wxhaskell/ChangeLog,v 1.7 2004/08/23 13:15:43 kosmikus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/wxhaskell/ChangeLog,v 1.8 2004/08/30 09:03:02 kosmikus Exp $
+
+  30 Aug 2004; Andres Loeh <kosmikus@gentoo.org> wxhaskell-0.8.ebuild:
+  Make use of wxwidgets eclass (#61871).
 
 *wxhaskell-0.8 (23 Aug 2004)
 
